OS Updates listbox papercuts
Just tried the latest Software on GNOME OS Nightly, a few minor things I noticed:
- The border is darker than regular listbox styling, so I assume it's not using the regular listbox style classes.
- There's no more background image on the top part, is that by design? It's better than the old one with the Fedora logo, but an actual GNOME OS background would be even better :)
cc @jimmac