gs-upgrade-banner: Make it a GtkListBox, to inherit proper styling

This makes the banner look like the other update sections in the Updates page.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1499